--- a/public/css/register.css
+++ b/public/css/register.css
@@ -26,4 +26,18 @@
             color: #08dce3;
             /* Light blue for "Online" text */
         }
+                @keyframes zoom {
+            0% {
+                transform: scale(1);
+            }
+            50% {
+                transform: scale(1.1);
+            }
+            100% {
+                transform: scale(1);
+            }
+        }
 
+        .clicked {
+            animation: zoom 1s ease-in-out;
+        }
