--- a/public/css/logoanimasi.css
+++ b/public/css/logoanimasi.css
@@ -121,4 +121,8 @@
                 background-position: 0 0;
             }
         }
-        
+        .navbar .dropdown-menu {
+    left: 50% !important;
+    transform: translateX(-50%) !important;
+}
+            
