--- a/public/css/guru.css
+++ b/public/css/guru.css
@@ -1,16 +1,16 @@
 
-        .bg-grey {
+        /* .bg-grey {
             background-color: #ffffff;
             color: white;
         }
 
         .card, .card-header, .card-body, th, td, .form-control, .btn {
-            /* font-weight: ; */
+
         }
 
         #searchInput {
             font-weight: bold;
-        }
+        } */
 
         .badge-active {
             background-color: #3ef569;
